--- a/7. Template homework/AWS/Terraform/files/index.html
+++ b/7. Template homework/AWS/Terraform/files/index.html
@@ -1,1 +1,5 @@
-"Hello World! Made by Rainbow Gravity"
+<h2>Hello World!</h2>
+
+<br>IP address of this EC2 Instance is: 'IP'</br>
+
+<br>Made by &#127752Gravity</br>
